# TinyLidarNet

./: Readme.md  data_collection_controller.py.py  environment.yml  inference.py  tln.yml
tinylidarnet/: CMakeLists.txt  package.xml  setup.cfg  setup.py
tinylidarnet/scripts/: benchmark.py  benchmark_inference.py  data_collection.py  data_collection_controller.py  gpu_delegate.txt  inference.py  inference_jeff.py  inference_tln.py  inference_trt.py  model_trt.py  temporal_lidarnet.h5  temporal_lidarnet.tflite  train.py  train_2.py  train_2D_CNN.py  train_jeff.py  train_modified.py  train_normalized.py  train_transformer.py
tinylidarnet/scripts/Models/: Jeff_2.tflite  RNN_Attn_Controller.tflite  RNN_Attn_Controller_int8.tflite  TLN.h5  TLN.tflite  TLN_2DCNN.tflite  TLN_Jeff.tflite  TLN_Jeff_Safe.tflite  TLN_M_noquantized.tflite  TLN_noquantized.tflite  TLN_with_position.tflite  lite_transformer.tflite  model.onnx  rnn_mega_comb.tflite  temporal_lidarnet.h5  temporal_lidarnet.tflite
tinylidarnet/scripts/Models/saved_model/: fingerprint.pb  saved_model.pb
tinylidarnet/scripts/car_Dataset/controller_fast_5/: metadata.yaml
tinylidarnet/scripts/car_Dataset/controller_slow_10min/: metadata.yaml
tinylidarnet/scripts/car_Dataset/pure_pursuit_fast_10/: metadata.yaml
tinylidarnet/scripts/sim_Dataset/test_kabir/: metadata.yaml
tinylidarnet/scripts/sim_Dataset/test_levine1/: metadata.yaml
tinylidarnet/scripts/sim_Dataset/test_levine2/: metadata.yaml
tinylidarnet/scripts/sim_Dataset/test_levine3/: metadata.yaml  test_levine3_0.csv  test_levine3_0.db3
(+16 files in other folders)
